# Rupture-VST

./: .gitignore  CMakeLists.txt  README.md  compile_scss.sh
src/core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/reverb/: ReverbProcessor.cpp  ReverbProcessor.h
src/resources/: layout.html  layout.scss  theme.scss
src/ui/: Background.h  LayoutView.cpp  LayoutView.h
